src/routes/styles.css
:root {
	--font-body: 'Helvetica Neue', 'Open Sans', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
		Oxygen, Ubuntu, Cantarell, sans-serif;
	--color-white: #ffffff;
	--color-primary: #f42c04;
	--color-title: #111;
	--color-text: #343434;
	--color-text-light: #646464;
	font-family: var(--font-body);
	color: var(--color-text);
}

* {
	box-sizing: border-box;
}

body {
	font-size: 16px;
	margin: 0;
	min-height: 100vh;
	padding: 0 20px;
}

input,
textarea,
button {
	font-size: 16px;
	font-family: var(--font-body);
}

h1,
h2,
h3 {
	color: var(--color-title);
	line-height: 1.2;
	margin: 0;
}

h1:not(:last-child),
h2:not(:last-child),
h3:not(:last-child) {
	margin: 0 0 0.5em;
}

h1 {
	font-size: 28px;
}

h2 {
	font-size: 22px;
}

p {
	line-height: 1.5;
	margin: 0;
}

p:not(:last-child) {
	margin: 0 0 1.2em;
}

a {
	color: var(--color-primary);
}

@media (min-width: 768px) {
	body {
		font-size: 20px;
	}

	h1 {
		font-size: 52px;
	}

	h2 {
		font-size: 28px;
	}
}

